--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
 
     <dimen name="drawer_view_default_width">360dp</dimen>
 
+    <dimen name="subscription_item_view_background_radius">16dp</dimen>
+
 </resources>
