--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <resources>
 
     <style name="BaseTheme" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/material_grey_50</item>
+        <item name="colorPrimaryDark">@color/material_grey_300</item>
+        <item name="colorAccent">@color/material_lime_500</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.Danmaqua" parent="BaseTheme"></style>
