--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryDark">@color/material_grey_300</item>
         <item name="colorAccent">@color/material_lime_500</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:navigationBarColor">@color/material_grey_1000</item>
     </style>
 
     <style name="Theme.Danmaqua" parent="BaseTheme"></style>
