--- a/app/src/main/res/layout/main_drawer_view.xml
+++ b/app/src/main/res/layout/main_drawer_view.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:clickable="true">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/drawerList"
@@ -17,32 +19,54 @@
         tools:listitem="@layout/subscription_item_view" />
 
     <LinearLayout
+        android:id="@+id/bottomBar"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/right_round_ripple_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="@dimen/subscription_item_view_background_radius"
-        android:paddingEnd="@dimen/subscription_item_view_background_radius"
-        tools:ignore="RtlHardcoded">
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="?attr/colorBackgroundFloating">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:src="@drawable/ic_settings_applications_24"
-            android:tint="?android:attr/textColorTertiary" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="8dp"
+            android:background="@drawable/right_round_ripple_background"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/subscription_item_view_background_radius"
+            android:paddingEnd="@dimen/subscription_item_view_background_radius"
+            tools:ignore="RtlHardcoded">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:src="@drawable/ic_settings_applications_24"
+                android:tint="?android:attr/textColorPrimary" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:textColor="?android:attr/textColorPrimary"
+                android:text="@string/action_settings" />
+
+        </LinearLayout>
+
+        <View android:layout_width="match_parent" android:layout_height="8dp"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/appVersionView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="@string/action_settings" />
+            android:layout_marginStart="24dp"
+            android:layout_marginBottom="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+            tools:text="FloatingCaption · Version 1.0.0 (1)"/>
 
     </LinearLayout>
 
