--- a/app/src/main/res/layout/main_toolbar_layout.xml
+++ b/app/src/main/res/layout/main_toolbar_layout.xml
@@ -10,13 +10,22 @@
         android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingStart="16dp"
+        android:paddingStart="8dp"
         android:paddingEnd="24dp"
         android:gravity="center_vertical"
         android:clickable="true"
         android:focusable="true"
         android:background="?android:attr/selectableItemBackgroundBorderless">
 
+        <ImageView
+            android:layout_width="12dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_chevron_right_24"
+            android:tint="?android:attr/textColorPrimary"
+            android:alpha="0.67"
+            android:tintMode="src_in"/>
 
         <FrameLayout
             android:layout_width="36dp"
@@ -45,14 +54,14 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/usernameView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 tools:text="Siubeng Official"/>
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/statusView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
