FilterSettings: Initial code
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/bottom_toolbar_layout.xml
+++ b/app/src/main/res/layout/bottom_toolbar_layout.xml
@@ -22,6 +22,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:text="@string/action_set_filter"
-        android:drawableStart="@drawable/ic_filter_list_24"/>
+        android:drawableEnd="@drawable/ic_filter_list_24"/>
 
 </FrameLayout>
