--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -39,6 +39,29 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="?android:attr/actionBarSize">
+
+            <TextView
+                android:id="@+id/backToTopButton"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/back_to_top_button_height"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center"
+                android:paddingStart="14sp"
+                android:paddingEnd="14sp"
+                android:background="@drawable/back_to_top_button_background"
+                android:text="@string/action_back_to_top"
+                android:textSize="14sp"
+                android:textColor="?android:textColorSecondary"
+                android:elevation="@dimen/back_to_top_button_elevation"/>
+
+        </FrameLayout>
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
             android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
