--- a/app/src/main/res/layout/main_drawer_view.xml
+++ b/app/src/main/res/layout/main_drawer_view.xml
@@ -28,6 +28,7 @@
         android:background="?attr/colorBackgroundFloating">
 
         <LinearLayout
+            android:id="@+id/settingsButton"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginLeft="0dp"
