--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,11 @@
 <resources>
 
     <style name="BaseTheme" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/material_grey_50</item>
-        <item name="colorPrimaryDark">@color/material_grey_300</item>
-        <item name="colorAccent">@color/material_lime_500</item>
+        <item name="colorPrimary">@color/material_deep_purple_500</item>
+        <item name="colorPrimaryDark">@color/material_deep_purple_700</item>
+        <item name="colorAccent">@color/material_blue_A400</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@color/material_grey_300</item>
         <item name="android:navigationBarColor">@color/material_grey_1000</item>
     </style>
 
@@ -13,6 +14,11 @@
     <style name="Theme.Danmaqua.NoActionBar" parent="Theme.Danmaqua">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="ThemeOverlay.Danmaqua.AppBar" parent="ThemeOverlay.MaterialComponents.Light">
+        <item name="colorPrimary">@color/material_grey_50</item>
+        <item name="colorPrimaryDark">@color/material_grey_300</item>
     </style>
 
     <style name="Widget.Danmaqua.IconTextButton" parent="Widget.MaterialComponents.TextView">
