--- a/app/src/main/res/layout/bottom_toolbar_layout.xml
+++ b/app/src/main/res/layout/bottom_toolbar_layout.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:layout_height="?android:attr/actionBarSize">
+    android:layout_height="?android:attr/actionBarSize"
+    android:background="?attr/bottomAppBarColor"
+    tools:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
     <com.google.android.material.textview.MaterialTextView
         style="@style/Widget.Danmaqua.IconTextButton"
