--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="drawer_view_default_width">360dp</dimen>
 
+    <dimen name="subscription_list_default_padding_top">16dp</dimen>
     <dimen name="subscription_item_view_background_radius">16dp</dimen>
     <dimen name="subscription_list_raised_view_elevation">16dp</dimen>
 
