--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -80,7 +80,8 @@
             app:contentInsetStart="0dp"
             app:contentInsetEnd="0dp"
             app:contentInsetLeft="0dp"
-            app:contentInsetRight="0dp">
+            app:contentInsetRight="0dp"
+            app:paddingBottomSystemWindowInsets="false">
 
             <include
                 android:id="@+id/bottomToolbarLayout"
