--- a/app/src/main/res/layout/subscription_add_item_view.xml
+++ b/app/src/main/res/layout/subscription_add_item_view.xml
@@ -7,10 +7,10 @@
     android:layout_marginEnd="8dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
-    android:paddingStart="16dp"
+    android:paddingLeft="@dimen/subscription_item_view_background_radius"
     android:paddingTop="4dp"
     android:paddingBottom="4dp"
-    android:paddingEnd="@dimen/subscription_item_view_background_radius"
+    android:paddingRight="@dimen/subscription_item_view_background_radius"
     android:focusable="true"
     android:clickable="true"
     android:background="@drawable/subscription_item_background_normal">
