--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="bottomAppBarColor">@color/bottom_appbar_color</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@color/material_grey_50</item>
+        <item name="android:navigationBarColor">@color/darken_nav_bar</item>
     </style>
 
     <style name="Theme.Danmaqua" parent="BaseTheme"></style>
@@ -19,7 +20,6 @@
     <style name="Theme.Danmaqua.MainActivity" parent="Theme.Danmaqua.NoActionBar">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="ThemeOverlay.Danmaqua.AppBar" parent="ThemeOverlay.MaterialComponents.Light">
