FilterSettings: Add check pattern validation & test helper
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,4 +40,8 @@
         <item name="android:paddingEnd">16dp</item>
     </style>
 
+    <style name="TextAppearance.Danmaqua.Monospace" parent="@style/TextAppearance.AppCompat">
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
