--- a/app/src/main/res/xml/preference_floating.xml
+++ b/app/src/main/res/xml/preference_floating.xml
@@ -6,12 +6,14 @@
     <androidx.preference.SwitchPreference
         android:key="floating_two_line"
         android:title="@string/floating_two_line_title"
-        android:summary="@string/floating_two_line_summary"/>
+        android:summary="@string/floating_two_line_summary"
+        android:icon="@drawable/ic_two_line_24_text_color_primary"/>
 
     <androidx.preference.SeekBarPreference
         android:key="floating_background_alpha"
         android:title="@string/floating_background_alpha_title"
         android:summary="@string/floating_background_alpha_summary"
+        android:icon="@drawable/ic_gradient_24_text_color_primary"
         android:max="@integer/floating_background_alpha_max"
         app:min="@integer/floating_background_alpha_min"
         app:showSeekBarValue="true"/>
@@ -20,6 +22,7 @@
         android:key="floating_text_size"
         android:title="@string/floating_text_size_title"
         android:summary="@string/floating_text_size_summary"
+        android:icon="@drawable/ic_format_size_24_text_color_primary"
         android:max="@integer/floating_text_size_max"
         app:min="@integer/floating_text_size_min"
         app:showSeekBarValue="true"/>
