--- a/app/src/main/res/xml/preference_main.xml
+++ b/app/src/main/res/xml/preference_main.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.preference.PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
         android:key="floating_settings"
-        android:title="@string/floating_settings_title"/>
+        android:title="@string/floating_settings_title"
+        android:icon="@drawable/ic_closed_caption_24_text_color_primary"/>
 
     <Preference
         android:key="filter_settings"
-        android:title="@string/filter_settings_title"/>
+        android:title="@string/filter_settings_title"
+        android:icon="@drawable/ic_filter_list_24_text_color_primary"/>
 
 </androidx.preference.PreferenceScreen>
